# tradebot

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  environment.yaml  environment.yml  pyproject.toml  setup.py
src/: main.py
src/clients/: robinhood.py
src/configs/: config.py  logger_config.py
tests/: test_main.py  test_risk_mgmt.py  test_strategy.py
tests/analyzers/: test_fundamentals.py  test_technical.py
tests/clients/: test_fin_provider.py  test_media_provider.py  test_robinhood_client.py
tradebot/: main.py  risk_mgmt.py  strategy.py
tradebot/analyzers/: fundamentals.py  technical.py
tradebot/clients/: fin_provider.py  media_provider.py  robinhood.py  robinhood_client.py
tradebot/configs/: config.py  logger_config.py
