
[project]
name = "tradebot"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "google-genai",
    "mypy",
    "numpy<2.0.0",
    "pandas",
    "pre-commit",
    "python-dotenv",
    "requests",
    "robin_stocks",
    "sec-api",
    "tweepy",
    "alpha-vantage",
    "newsapi-python>=0.2.7",
    "pytest",
]
requires-python = ">=3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
